# azure-umaqp-cpp-wrapper

./: AzureAmqpWsWrapper.cc  AzureAmqpWsWrapper.h  CMakeLists.txt  main.cc
